added tests security